--- a/src/index.css
+++ b/src/index.css
@@ -680,7 +680,7 @@ footer {
   padding: 4rem 1rem;
 }
 .ib-cta .container {
-  background: var(--primary-color);
+  background: rgba(19, 104, 166, 0.2); /* 1368A6 with 20% opacity */
   padding: 4rem 0;
   border-radius: 1.635rem;
 }
@@ -689,7 +689,7 @@ footer {
   color: #fff;
 }
 .ib-cta p {
-  color: #fff;
+  color: #b2b2b2;
 }
 .ib-terms {
   margin: 2rem 0;
